<resources>
    //SETTINGS SCREEN //
    <string name="app_name">Early Weather Warning</string>
    <string name="action_settings">Settings</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="miles">Miles</string>
    <string name="celsius">Celsius</string>
    <string name="kilometers">Kilometers</string>
    <string name="wind">Wind</string>
    <string name="windspeed">Windspeed</string>
    <string name="gusts">Gusts</string>
    <string name="direction">Direction</string>
    <string name="notifications">Notifications</string>
    <string name="toggle_notifications">Toggle Notifications</string>
    <string name="show_on_lockscreen">Show on Lockscreen</string>
    <string name="metrics">Metrics</string>
    <string name="toggle_change">Toggle Changes</string>
    <string name="title_activity_settings">Settings Activity</string>

    //MAIN SCREEN //
    <string name="eww">EWW</string>
    <string name="title">Early Weather Warning</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="favorites">Favorites</string>
    <string name="information">Information</string>
    <string name="help">Help</string>
    <string name="searchbutton">searchbutton</string>
    <string name="settingsbutton">settingsbutton</string>
    <string name="mapbutton">mapbutton</string>
    <string name="favoritesbutton">favoritesbutton</string>
    <string name="informationbutton">informationbutton</string>
    <string name="helpbutton">helpbutton</string>
    <string name="logotext">Early Weather Warning</string>

    // SEARCH SCREEN //
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_title_bar">Search View</string>
    <string name="search_button">Search</string>
    <string name="station_name">Station</string>
    <string name="temp_air">Air Temperature</string>
    <string name="temp_road">Road Temperature</string>

    // HELP SCREEN //
    <string name="textheader">Testing 1234567</string>
    <string name="title_activity_help">Help Activity</string>

    // FAVORITE SCREEN //
    <string name="addfavorite">Add to favorites</string>
    <string name="texthint">Enter weatherstation</string>
    <string name="title_activity_favorites">Favorites Activity</string>

    // WIDGET ACTIVITY //
    <string name="location">Location</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_gust">Wind Gust</string>
    <string name="road_temperature">Road Temperature</string>
    <string name="title_activity_map">Map Activity</string>
    <string name="refresh">Refresh</string>

    // DRIVE ACTIVITY //
    <string name="stationName">No nearby station.</string>
    <string name="distanceText"> </string>
    <string name="airTempText">Air</string>
    <string name="airTemp"> </string>
    <string name="airTempMetric">°C</string>
    <string name="roadTempText">Road</string>
    <string name="roadTemp"> </string>
    <string name="roadTempMetric">°C</string>
    <string name="windSpdText">Wind</string>
    <string name="windSpd"> </string>
    <string name="windSpdMetric">m/s</string>
    <string name="distanceText2"> </string>
    <string name="stationName2">No nearby station.</string>
    <string name="airTemp2"> </string>
    <string name="roadTemp2"> </string>
    <string name="windSpd2"> </string>
    <string name="distanceText3"> </string>
    <string name="stationName3">No nearby station.</string>
    <string name="airTemp3"> </string>
    <string name="roadTemp3"> </string>
    <string name="windSpd3"> </string>
    <string name="warningPic">Warning!</string>
    <string name="warningPic2">Warning!</string>
    <string name="warningPic3">Warning!</string>



</resources>
