<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#ff272a2b"
    android:id="@+id/relativeLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/eww"
        android:textSize="30sp"
        android:textColor="#ff3490e8"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="start|center_vertical"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/title"
        android:textSize="35sp"
        android:textColor="#ff3490e8"
        android:id="@+id/textView6"
        android:gravity="start|center_vertical"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <ImageButton
        android:layout_width="@android:dimen/notification_large_icon_width"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:id="@+id/imageButton"
        android:background="@android:drawable/ic_menu_search"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/imageButton2"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/searchbutton" />

    <ImageButton
        android:layout_width="@android:dimen/notification_large_icon_width"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:id="@+id/imageButton2"
        android:background="@android:drawable/ic_menu_manage"
        android:layout_alignBottom="@+id/imageButton"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/settingsbutton" />

    <ImageButton
        android:layout_width="@android:dimen/notification_large_icon_width"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:id="@+id/imageButton3"
        android:background="@android:drawable/ic_menu_help"
        android:layout_marginStart="40dp"
        android:layout_alignTop="@+id/imageButton5"
        android:layout_toEndOf="@+id/imageButton5"
        android:contentDescription="@string/mapbutton" />

    <ImageButton
        android:layout_width="@android:dimen/notification_large_icon_width"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:id="@+id/imageButton4"
        android:background="@android:drawable/ic_menu_myplaces"
        android:layout_below="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/favoritesbutton" />

    <ImageButton
        android:layout_width="@android:dimen/notification_large_icon_width"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:id="@+id/imageButton5"
        android:background="@android:drawable/ic_menu_info_details"
        android:layout_alignTop="@+id/imageButton4"
        android:layout_alignStart="@+id/imageButton2"
        android:contentDescription="@string/informationbutton" />

    <ImageButton
        android:layout_width="@android:dimen/notification_large_icon_width"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:id="@+id/imageButton6"
        android:background="@android:drawable/ic_menu_mapmode"
        android:layout_alignTop="@+id/imageButton2"
        android:layout_alignStart="@+id/imageButton3"
        android:contentDescription="@string/helpbutton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/textView7"
        android:layout_below="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton"
        android:layout_alignEnd="@+id/imageButton"
        android:textColor="#ffffffff"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/textView8"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:layout_alignTop="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:id="@+id/textView9"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignStart="@+id/imageButton6"
        android:layout_alignEnd="@+id/imageButton6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        android:id="@+id/textView10"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:layout_below="@+id/imageButton4"
        android:layout_alignStart="@+id/imageButton4"
        android:layout_alignEnd="@+id/imageButton4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:id="@+id/textView11"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:layout_below="@+id/imageButton3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:id="@+id/textView12"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:layout_alignTop="@+id/textView11"
        android:layout_alignStart="@+id/imageButton3"
        android:layout_alignEnd="@+id/imageButton3" />

</RelativeLayout>