<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nu.here.is.teampinez.weatherwarning.SettingsActivity"
    android:background="#ff272a2b"
    android:orientation="vertical"
    android:id="@+id/relativeLayout"
    android:onClick="displayNotification"
    android:clickable="true">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/metrics"
        android:textSize="30sp"
        android:textColor="#ff3490e8"
        android:id="@+id/textMetrics"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/toggle_change"
        android:textColor="#34495e"
        android:id="@+id/btnToggleChanges"
        android:textSize="17sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="false" />

    <!--<ExpandableListView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/expandableListView"-->
    <!--android:textColor="#FFFFFF"/>-->

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fahrenheit"
        android:id="@+id/chkBoxFahrenheit"
        android:layout_below="@+id/textMetrics"
        android:checked="false"
        android:textSize="14sp"
        android:textColor="#ffffffff" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles"
        android:id="@+id/chkBoxMiles"
        android:layout_below="@+id/chkBoxFahrenheit"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:textSize="14sp"
        android:textColor="#ffffffff" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kilometers"
        android:id="@+id/chkBoxKilometers"
        android:layout_below="@+id/chkBoxFahrenheit"
        android:layout_alignParentEnd="true"
        android:checked="true"
        android:textSize="14sp"
        android:textColor="#ffffffff" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celsius"
        android:id="@+id/chkBoxCelcius"
        android:checked="true"
        android:textSize="14sp"
        android:layout_below="@+id/textMetrics"
        android:layout_alignStart="@+id/chkBoxKilometers"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/wind"
        android:textSize="30sp"
        android:textColor="#ff3490e8"
        android:id="@+id/textWind"
        android:gravity="center"
        android:layout_below="@+id/chkBoxMiles"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windspeed"
        android:id="@+id/chkBoxWindspeed"
        android:checked="false"
        android:textSize="14sp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/textWind" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gusts"
        android:id="@+id/chkBoxGusts"
        android:checked="false"
        android:textSize="14sp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/textWind"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction"
        android:id="@+id/chkBoxDirection"
        android:checked="false"
        android:textSize="14sp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/textWind"
        android:layout_alignEnd="@+id/textWind" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/notifications"
        android:textSize="30sp"
        android:textColor="#ff3490e8"
        android:id="@+id/textNotifications"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_notifications"
        android:id="@+id/chkBoxToggleNotifications"
        android:checked="false"
        android:textSize="14sp"
        android:textColor="#ffffffff"
        android:layout_alignTop="@+id/chkBoxShowOnLockscreen"
        android:layout_alignParentStart="true"
        android:clickable="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_on_lockscreen"
        android:id="@+id/chkBoxShowOnLockscreen"
        android:checked="false"
        android:textSize="14sp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/textNotifications"
        android:layout_alignParentEnd="true" />

</RelativeLayout>