<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nu.here.is.teampinez.weatherwarning.SearchActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title_bar"
        android:id="@+id/search_title_bar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="15pt"
        android:paddingBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:id="@+id/search_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_name"
        android:id="@+id/name"
        android:layout_below="@+id/search_title_bar"
        android:layout_alignParentStart="true"
        android:paddingBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_air"
        android:id="@+id/temp_air"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"
        android:paddingBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_road"
        android:id="@+id/temp_road"
        android:layout_below="@+id/temp_air"
        android:layout_alignParentStart="true"
        android:paddingBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windspeed"
        android:id="@+id/wind"
        android:layout_below="@+id/temp_road"
        android:layout_alignParentStart="true"
        android:paddingBottom="5dp" />

</RelativeLayout>
