<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:weightSum="1"
    android:textAlignment="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:clickable="true"
            android:background="#ff3498db"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/station_name"
            android:id="@+id/stationNameBtn"
            android:layout_weight="0.50" />

        <Button
            android:layout_width="0px"
            android:clickable="true"
            android:background="#ff3498db"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/refresh"
            android:id="@+id/refreshBtn"
            android:layout_weight="0.50" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="#ff3498db"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/wind_direction"
            android:id="@+id/windDirectionBtn"
            android:padding="6dp" />

        <TextView
            android:layout_weight="1"
            android:clickable="true"
            android:background="#ff3498db"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/wind_speed"
            android:id="@+id/windSpeedBtn"
            android:padding="6dp" />

        <TextView
            android:layout_weight="1"
            android:clickable="true"
            android:background="#c0392b"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/wind_gust"
            android:id="@+id/windGustBtn"
            android:padding="5dp" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0px"
            android:clickable="true"
            android:background="#ff3498db"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/road_temperature"
            android:id="@+id/roadTemperatureBtn"
            android:padding="5dp" />
    </LinearLayout>

</LinearLayout>