<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5sp"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:id="@+id/gridLayout"
        android:layout_alignParentBottom="false">

        <Button
            android:layout_width="94dp"
            android:layout_height="38dp"
            android:text="@string/location"
            android:id="@+id/button5"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_column="0"
            android:layout_gravity="top" />

        <Button
            android:layout_width="93dp"
            android:layout_height="94dp"
            android:text="@string/wind_direction"
            android:id="@+id/button"
            android:layout_row="1"
            android:layout_column="0"
            android:clickable="true"
            android:layout_gravity="fill_horizontal|start|bottom|center_horizontal"
            android:singleLine="false" />

        <Button
            android:layout_width="93dp"
            android:layout_height="94dp"
            android:text="@string/wind_speed"
            android:id="@+id/button2"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|start|bottom|center_horizontal" />

        <Button
            android:layout_width="93dp"
            android:layout_height="94dp"
            android:text="@string/temperature"
            android:id="@+id/button3"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal|start|bottom|center_horizontal" />

        <Button
            android:layout_width="93dp"
            android:layout_height="94dp"
            android:text="@string/wind_gust"
            android:id="@+id/button4"
            android:layout_row="1"
            android:layout_gravity="fill_horizontal|start|bottom|center_horizontal"
            android:layout_column="4" />
    </GridLayout>

</RelativeLayout>
